--- a/styles/index.css
+++ b/styles/index.css
@@ -91,23 +91,24 @@ h1 {
   margin-top: 10px;
 }
 
-.slider-nav {
-  margin-top: 35px;
-  margin-left: 45%;
+#slider-nav {
+  text-align: center;
+  margin-top: 10px;
 }
+
 
 .slider-dot {
   display: inline-block;
-  width: 10px;
-  height: 10px;
-  background-color: #ccc;
-  border-radius: 50%;
+  width: 12px;
+  height: 12px;
   margin: 0 5px;
+  background-color: gray;
+  border-radius: 50%;
   cursor: pointer;
 }
 
 .slider-dot.active {
-  background-color: #333;
+  background-color: black;
 }
 
 #prev,
@@ -127,57 +128,74 @@ h1 {
 
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: wrap;
   margin-left: 20px;
   margin-top: 40px;
 }
 
-.flex1 {
-  flex: 1;
-  margin-right: 10px;
-}
 
 .title h3 {
   color: #00263d;
-  font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-size: 13px;
-  margin-top: 90px;
+  margin-top: 120px;
+  font-weight: 400;
 }
 
 p {
   color: #00263d;
-  font-weight: 100;
+  font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
-  font-size: 8px;
+  font-size: 13px;
   margin-top: 10px;
+}
+
+.flex1, .flex2 {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.flex1 {
+  flex: 2;
+  margin-right: 10px;
+}
+
+.flex2 {
+  flex: 1;
+  margin-left: 10px;
 }
 
 .flex2 div {
   margin-bottom: 20px;
 }
 
+
 .image3 {
   width: 220px;
   height: 400px;
+  margin-bottom: 10px;
 }
 
 .image1 {
   width: 230px;
+  margin-bottom: 10px;
 }
 
 .image2 {
   width: 230px;
+  margin-bottom: 10px;
 }
 
 .image4 {
   width: 220px;
   height: 280px;
+  margin-bottom: 10px;
 }
 
 .flex4 {
-  flex: 4;
-  margin-right: 10px;
+  flex: 1;
+  margin-left: 10px;
 }
 
 .flex3 div {
@@ -242,6 +260,12 @@ a:hover {
     margin-right: 30px;
   }
 
+  .flex4 {
+   
+    margin-right: 30px;
+  }
+
+
   .flex2 div {
     margin-bottom: 20px;
   }
@@ -270,73 +294,74 @@ a:hover {
 }
 
 @media (min-width: 900px) {
-
-  .slider-controls{
-    gap: 1000px; 
-  }
-  .slider-container {
-    margin-top: 60px;
-    width: 55%;
+.flex1, .flex3 {
+    flex: 1;
+    
   }
 
-  .slide img {
-    height: 45vh;
+  .container{
+  margin-left: 140px;
+}
+  .flex2, .flex4 {
+    flex: 2;
+    margin-left: 80px;
   }
 
   .flex1 {
-    flex: 1;
     margin-right: 20px;
     margin-left: 80px;
   }
 
   .flex2 {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    margin-right: 80px;
+    margin-right: 30px;
+  }
+
+  
+  .flex3 {
+  
+    margin-left: 70px;
+  }
+
+  .flex4 {
+    margin-right: 30px;
   }
 
   .flex2 div {
-    margin-bottom: 20px;
+    margin-bottom: 10px; 
+  }
+  .image3, .image4 {
+    width: 600px;
+    height: 560px;
   }
 
-  .image3 {
-    width: 520px;
-    height: 460px;
+  .image1, .image2, .image6, .image7 {
+    width: 600px;
   }
 
-  .image1 {
-    width: 700px;
-  }
-
-  .image2 {
-    width: 700px;
-  }
-
-  .image4 {
-    width: 420px;
-    height: 400px;
-  }
-
-  .title h3 {
-    color: #00263d;
-    font-weight: 700;
-    font-family: "neue-haas-grotesk-text", sans-serif;
-    font-size: 24px;
-    margin-top: 90px;
+  .title {
+    font-size: 23px;
+    font-weight: 400;
+    margin-top: 20px;
+    padding-right: 120px;
   }
 
   p {
-    color: #00263d;
-    font-weight: 100;
-    font-family: "neue-haas-grotesk-text", sans-serif;
-    font-size: 13px;
+    font-size: 16px;
+    line-height: 22px;
     margin-top: 10px;
+    padding-right: 120px;
   }
 
-  .slider-text p{
+  .slider-text p {
     font-size: 16px;
     margin-bottom: 30px;
-    
+  }
+
+  .slider-container{
+    width: 60%;
+  }
+  .slider-controls{
+    top: 590px;
+    gap:66%; 
   }
 }
