--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   font-family: "neue-haas-grotesk-text", sans-serif;
- 
 }
 
 #logo {
@@ -33,16 +32,15 @@ h1 {
   margin: 20px auto;
   margin-top: 110px;
 }
-.slider-controls{
+.slider-controls {
   position: absolute;
   display: flex;
-  justify-content: center; 
-  align-items: center; 
-  gap: 420px; 
+  justify-content: center;
+  align-items: center;
+  gap: 420px;
   width: 100%;
   top: 530px;
   left: 2px;
-
 }
 
 .slide-content {
@@ -82,7 +80,7 @@ h1 {
   margin-top: 0;
   margin-left: 20px;
 }
-.slider-text p{
+.slider-text p {
   color: #00263d;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
@@ -94,22 +92,21 @@ h1 {
 
 #slider-nav {
   text-align: center;
-  margin-top: 10px;
+  margin: 10px 0;
 }
-
 
 .slider-dot {
   display: inline-block;
   width: 12px;
   height: 12px;
   margin: 0 5px;
-  background-color: gray;
+  background-color: #decfba;
   border-radius: 50%;
   cursor: pointer;
 }
 
 .slider-dot.active {
-  background-color: black;
+  background-color: #b95927;
 }
 
 #prev,
@@ -134,7 +131,6 @@ h1 {
   margin-top: 40px;
 }
 
-
 .title h3 {
   color: #00263d;
   font-family: "neue-haas-grotesk-text", sans-serif;
@@ -151,7 +147,8 @@ p {
   margin-top: 10px;
 }
 
-.flex1, .flex2 {
+.flex1,
+.flex2 {
   display: flex;
   flex-direction: column;
   margin: 5px;
@@ -170,7 +167,6 @@ p {
 .flex2 div {
   margin-bottom: 20px;
 }
-
 
 .image3 {
   width: 210px;
@@ -220,6 +216,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   gap: 4px;
+  margin-top: 20px;
 }
 
 .balk {
@@ -262,10 +259,8 @@ a:hover {
   }
 
   .flex4 {
-   
     margin-right: 30px;
   }
-
 
   .flex2 div {
     margin-bottom: 20px;
@@ -289,21 +284,22 @@ a:hover {
     height: 400px;
   }
 
-  .slider-controls{
-    gap: 700px; 
+  .slider-controls {
+    gap: 700px;
   }
 }
 
 @media (min-width: 900px) {
-.flex1, .flex3 {
+  .flex1,
+  .flex3 {
     flex: 1;
-    
   }
 
-  .container{
-  margin-left: 140px;
-}
-  .flex2, .flex4 {
+  .container {
+    margin-left: 140px;
+  }
+  .flex2,
+  .flex4 {
     flex: 2;
     margin-left: 80px;
   }
@@ -317,9 +313,7 @@ a:hover {
     margin-right: 30px;
   }
 
-  
   .flex3 {
-  
     margin-left: 70px;
   }
 
@@ -328,14 +322,18 @@ a:hover {
   }
 
   .flex2 div {
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
-  .image3, .image4 {
+  .image3,
+  .image4 {
     width: 600px;
     height: 560px;
   }
 
-  .image1, .image2, .image6, .image7 {
+  .image1,
+  .image2,
+  .image6,
+  .image7 {
     width: 600px;
   }
 
@@ -358,11 +356,11 @@ a:hover {
     margin-bottom: 30px;
   }
 
-  .slider-container{
+  .slider-container {
     width: 60%;
   }
-  .slider-controls{
+  .slider-controls {
     top: 590px;
-    gap:66%; 
+    gap: 66%;
   }
 }
