--- a/styles/profiel.css
+++ b/styles/profiel.css
@@ -3,7 +3,7 @@
   font-family: "neue-haas-grotesk-text", sans-serif;
 }
 .kader {
-  border: 1px #00263D solid;
+  border: 1px #00263d solid;
   border-radius: 10px;
   padding: 10px 15px;
   display: flex;
@@ -31,7 +31,7 @@
   color: #b95927;
 }
 
-h1{
+h1 {
   text-align: left;
   color: #b95927;
   font-weight: 400;
@@ -46,7 +46,7 @@ h2 {
   color: #00263d;
   margin-bottom: 10px;
 }
-h3{
+h3 {
   color: #00263d;
   margin-bottom: 10px;
 }
@@ -58,24 +58,22 @@ h3{
   margin: 10px;
 }
 .kader-artikels {
-  display: flex;
-  align-items: flex-start;
+  background-color: #f1f1f1;
+  width: 100%;
   margin: 10px;
-  flex-direction: column
 }
 
 #profiel_foto {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  margin-right: 10px; 
+  margin-right: 10px;
   margin-top: -20px;
 }
 
-.profiel_foto img{
+.profiel_foto img {
   width: 90px;
 }
-
 
 .button {
   padding: 7px 14px;
@@ -96,66 +94,65 @@ h3{
   margin-bottom: 29px;
 }
 
-.info{
-  color: #00263D;
+.info {
+  color: #00263d;
   margin-left: 20px;
 }
 
-.email{
+.email {
   color: rgb(0, 38, 61, 50%);
   margin-bottom: 10px;
 }
 
-
 .image {
-  width: 190px; 
-  height: 190px; 
+  width: 100%;
+  height: 200px; /* Stelt een vaste hoogte in zodat alle afbeeldingen dezelfde grootte hebben */
   overflow: hidden;
   border-radius: 5px;
-  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #00263d;
 }
 
 .image img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover; /* Zorgt ervoor dat de afbeelding zichzelf correct aanpast binnen de container */
   display: block;
   border-radius: 5px;
 }
 
-.article-content {
-  flex: 1; 
-}
+/* .article-content {
+  width: 100%;
+} */
 
 .title h3 {
-  margin-top: 13px; 
+  margin: 13px 5px 0 5px;
+
   font-size: 18px;
-  color:  #00263d;
+  color: #00263d;
+  /* flex-wrap: wrap; */
+  /* margin-right: 180px; */
+}
+
+.kader-artikels-container {
+  display: flex;
   flex-wrap: wrap;
-  margin-right: 180px;
 }
 
-
-
-
-
-@media(min-width:1000px){
-
-  .kader-header{
-   margin-left: 40px; 
+@media (min-width: 660px) {
+  .kader-artikels {
+    width: 46.5%;
   }
-
-  .kader-inhoud{
-    margin-left: 50px;
-  }
-
-  .kader {
-    margin-left: 85px;
-    margin-right: 85px;
-  }
-
-  h1{
-    margin-left: 85px;
-  }
-  
 }
-
+@media (min-width: 1000px) {
+  .kader-artikels {
+    width: 30.6%;
+  }
+}
+@media (min-width: 1200px) {
+  .kader-artikels {
+    width: 23.5%;
+  }
+}
